--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>sys_manage</module>
         <module>sundry_test</module>
         <module>scala_test</module>
+        <module>java_utils_tools</module>
     </modules>
 
     <parent>
